src/pages/Home.module.css
.root {
  display: flex;
  flex: 1;
  flex-direction: column;
  gap: 12px;
  align-items: center;
  max-width: 100vw;
  overflow-x: hidden;
}

.title {
  margin-top: 16px;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 150%;
}

.subTitle {
  font-style: italic;
  font-size: 85%;
}

.allBooks {
  display: flex;
  gap: 12px;
  flex-wrap: wrap;
}

@media (max-width: 749px) {
  .verticalFadeLine {
    display: none;
  }
}

.booksStack {
  margin: 16px 0 16px;
  gap: 20px;
  display: flex;
  flex-direction: column;
  width: 100vw;
  padding: 0 16px;
}

@media (min-width: 750px) {
  .booksStack {
    width: 45vw;
    max-width: 650px;
  }
}

.stackTitle {
  font-size: 115%;
  font-weight: 500;
  font-family: serif;
  text-align: center;
}

.booksSection {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.booksSectionTitle {
  text-transform: uppercase;
  font-size: 75%;
  font-family: sans-serif;
  font-weight: 550;
  color: rgb(175, 131, 1);
  opacity: 0.6;
}

.bookList {
  display: flex;
  gap: 6px;
  flex-wrap: wrap;
}

.book {
  width: 180px;
}

.bookLink {
  border: 1px solid rgba(255, 255, 255, 0.1);
  padding: 3px 11px 3px 7px;
  transform: translateX(-7px);
  font-size: 110%;
}

.bookNumber {
  display: inline-block;
  opacity: 0.6;
  font-weight: 500;
  font-size: 65%;
  width: 20px;
}

.footer {
  margin-top: 16px;
  padding-bottom: 200px;
  font-style: italic;
}

